test/files/neg/macro-reify-groundtypetag-usetypetag.check
Test.scala:5: error: No GroundTypeTag available for T
    println(implicitly[GroundTypeTag[T]])
                      ^
Test.scala:6: error: No GroundTypeTag available for List[T]
    println(implicitly[GroundTypeTag[List[T]]])
                      ^
two errors found
